--- a/Query.html
+++ b/Query.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Query Form</title>
+    <LInk rel="stylesheet" href="CSS/STYLE.CSS"></LInk>
 </head>
 <body>
     <h2 color="Cyan"> <em>Post Your Query</em></h2>
