--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My_Site</title>
+    <LInk rel="stylesheet" href="CSS/STYLE.CSS"></LInk>
 </head>
-<body>
+<body >
     <table cellspacing="10" border="1">
         <tr >
             
@@ -13,7 +14,7 @@
         </tr>
 
     </table>
-    <hr size="5" color="Black">
+    <hr >
     <table>
         <tr>
             <td><img src="70.jpg" alt="my_pofile_pic"></td>
@@ -25,7 +26,7 @@
             </td>
         </tr>
     </table>
-     <hr size="5" color="Black">
+     <hr >
     <ul>
         <li><strong>Educational Qualification</strong></li>
         <ul>
@@ -52,7 +53,7 @@
         </ul>
 
     </ul>
-    <hr size="10" color="Red">
+    <hr >
     <table>
         <tr>
             <td><a href="vision.html" target="_blank">Our VISION</a></td>
