--- a/vision.html
+++ b/vision.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ankur's Vision</title>
+    <LInk rel="stylesheet" href="CSS/STYLE.CSS"></LInk>
 </head>
 <body>
     <p>Live the Life of Your Dreams: Be brave enough to live the life of your dreams <br> according to your vision and purpose instead of the expectations and opinions of others.</p>
